@@ -7,7 +7,6 @@ libotp.c
 
 paranoia.c
  * Enhanced session management (ack)
- * Hide or change the session init messages
  * Send entropy warnings (inside messages)
  * evaluate "buddy offline signal"
  * check message size limits
